kubernetes/base/deployment.yml
#            - name: PYTHONVERBOSE
#              value: "true"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: _PROJECT_NAME_
  labels:
    app: _PROJECT_NAME_
spec:
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: _PROJECT_NAME_
  template:
    metadata:
      labels:
        app: _PROJECT_NAME_
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "2"
      containers:
        - name: _PROJECT_NAME_
          command: [ "/app/entrypoint.sh" ]
          # command: [ "/usr/bin/supervisord" ]
          # args: [ "-c", "/etc/supervisord.conf" ]
          image: _PROJECT_NAME_-image
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              memory: 256Mi
              cpu: 0.2
            limits:
              memory: 1024Mi
              cpu: 1
