kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: _PROJECT_NAME_
  labels:
    app: _PROJECT_NAME_
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
  selector:
    app: _PROJECT_NAME_

---
